--- a/main.css
+++ b/main.css
@@ -5,6 +5,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    background-color: #333;
+}
+
 .container {
     max-width: 1036px;
     margin: 40px auto 0 auto;
@@ -16,6 +20,7 @@ h2{
 }
 
 header .container{
+    border-radius: 20px 20px 0 0;
     background-color:#F2F2F2 ;
     padding: 40px;
 }
